[package]
name = "accumulator"
version = "0.1.1"
edition = "2018"
authors = [
  "Pablo Aldape <pablo@vest.io>",
  "Lucas Ege <lucas@vest.io>",
  "Sanjay Kannan <sanjay@vest.io>",
  "Eddie Wang <eddie@vest.io>"
]
description = "Cryptographic accumulators in Rust."
keywords = ["cryptography", "crypto", "accumulator", "rsa", "vector", "commitment"]
readme = "README.md"
repository = "https://github.com/1protocol/accumulator"

[dependencies]
arrayref = "0.3.5"
blake2-rfc = "0.2.18"
curve25519-dalek = "1.1.3"
gmp-mpfr-sys = "1.1.11"
lazy_static = "1.2.0"
rug = "1.3.0"

[dev-dependencies]
criterion = "0.2.10"
rand = "0.6.5"

[[bench]]
name = "add"
path = "benches/accumulator/add.rs"
harness = false

[[bench]]
name = "comparison"
path = "benches/group/comparison.rs"
harness = false

[[bench]]
name = "delete"
path = "benches/accumulator/delete.rs"
harness = false

[[bench]]
name = "hashes"
path = "benches/hash/hashes.rs"
harness = false

[[bench]]
name = "primality"
path = "benches/hash/primality.rs"
harness = false

[[bench]]
name = "poe"
path = "benches/proof/poe.rs"
harness = false

[[bench]]
name = "pokcr"
path = "benches/proof/pokcr.rs"
harness = false

[[bench]]
name = "poke2"
path = "benches/proof/poke2.rs"
harness = false

[[bench]]
name = "u256"
path = "benches/u256.rs"
harness = false

[profile.bench]
opt-level = 3
debug = true

# Flamegraph debug symbols. TODO: Remove when we actually cut releases?
[profile.release]
debug = true
