[package]
name = "accumulator"
version = "0.1.1"
edition = "2018"
authors = [
  "Pablo Aldape <pablo@vest.io>",
  "Lucas Ege <lucas@vest.io>",
  "Sanjay Kannan <sanjay@vest.io>",
  "Eddie Wang <eddie@vest.io>"
]
description = "Cryptographic accumulators in Rust."
keywords = ["cryptography", "crypto", "accumulator", "rsa", "vector", "commitment"]
readme = "README.md"
repository = "https://github.com/1protocol/accumulator"

[dependencies]
blake2-rfc = "0.2.18"
curve25519-dalek = "1.0.3"
lazy_static = "1.2.0"
rug = "1.3.0"
gmp-mpfr-sys = "1.1"

[dev-dependencies]
criterion = "0.2.9"
rand = "0.6.5"

[[bench]]
name = "accumulator"
path = "benches/accumulator.rs"
harness = false

[[bench]]
name = "comparison"
path = "benches/group/rsa.rs"
harness = false

[[bench]]
name = "class"
path = "benches/group/class.rs"
harness = false

[[bench]]
name = "hashes"
path = "benches/hash/hashes.rs"
harness = false

[[bench]]
name = "primality"
path = "benches/hash/primality.rs"
harness = false

[[bench]]
name = "poe"
path = "benches/proof/poe.rs"
harness = false

[[bench]]
name = "pokcr"
path = "benches/proof/pokcr.rs"
harness = false

[[bench]]
name = "poke2"
path = "benches/proof/poke2.rs"
harness = false

[profile.bench]
opt-level = 3
debug = true

# Flamegraph debug symbols. TODO: Remove when we actually cut releases?
[profile.release]
debug = true

[features]

benchmark = []

# Optimizations for class group squaring.
flint = []
nudulp = []
