[package]
name = "accumulator"
version = "0.1.1"
edition = "2018"
authors = [
  "Pablo Aldape <pablo.aldape@gmail.com>",
  "Lucas Ege <egelucas@gmail.com>",
  "Alan Flores-Lopez <alanf94@gmail.com>",
  "Sanjay Kannan <whaatt@gmail.com>",
  "Michael Straka <mstraka100@gmail.com>",
  "Eddie Wang <eddiew@cs.stanford.edu>"
]
description = "Cryptographic accumulators in Rust."
keywords = ["cryptography", "crypto", "accumulator", "rsa", "vector", "commitment"]
readme = "README.md"
repository = "https://github.com/1protocol/accumulator"

[dependencies]
arrayref = "0.3.5"
blake2-rfc = "0.2.18"
curve25519-dalek = "1.1.3"
gmp-mpfr-sys = "1.1.12"
lazy_static = "1.3.0"
rug = "1.3.0"

[dev-dependencies]
criterion = "0.2.11"
rand = "0.6.5"

[[bench]]
name = "comparison"
path = "benches/group/rsa.rs"
harness = false

[[bench]]
name = "class"
path = "benches/group/class.rs"
harness = false

[[bench]]
name = "add"
path = "benches/accumulator/add.rs"
harness = false


[[bench]]
name = "delete"
path = "benches/accumulator/delete.rs"
harness = false

[[bench]]
name = "hashes"
path = "benches/hash/hashes.rs"
harness = false

[[bench]]
name = "primality"
path = "benches/hash/primality.rs"
harness = false

[[bench]]
name = "poe"
path = "benches/proof/poe.rs"
harness = false

[[bench]]
name = "pokcr"
path = "benches/proof/pokcr.rs"
harness = false

[[bench]]
name = "poke2"
path = "benches/proof/poke2.rs"
harness = false

[[bench]]
name = "uint"
path = "benches/uint.rs"
harness = false

[profile.bench]
opt-level = 3
debug = true

# Flamegraph debug symbols. TODO: Remove when we actually cut releases?
[profile.release]
debug = true
